# goit-pyweb-hw-02

./: Dockerfile  app.py  pyproject.toml
pyweb-hw-02-app/: Dockerfile
solution/: pyproject.toml
